--- a/src/main/resources/assets/sublime/lang/en_us.lang
+++ b/src/main/resources/assets/sublime/lang/en_us.lang
@@ -28,6 +28,8 @@ tile.black_lotus.name=Black Lotus
 tile.thatch.name=Thatch
 tile.fence_bloodless_elm.name=Bloodless Elm Fence
 tile.fence_hanami.name=Hanami Fence
+tile.fence_gate_bloodless_elm.name=Bloodless Elm Fence Gate
+tile.fence_gate_hanami.name=Hanami Fence Gate
 
 // Armor
 item.iridium_helmet.name=Iridium Helmet
