Added blocks for Iridium, Niobium, and Tungsten.

--- a/src/main/resources/assets/sublime/lang/en_us.lang
+++ b/src/main/resources/assets/sublime/lang/en_us.lang
@@ -11,6 +11,9 @@ item.door_hanami.name=Hanami Door
 tile.iridium_ore.name=Iridium Ore
 tile.niobium_ore.name=Niobium Ore
 tile.tungsten_ore.name=Tungsten Ore
+tile.iridium_block.name=Block of Iridium
+tile.niobium_block.name=Block of Niobium
+tile.tungsten_block.name=Block of Tungsten
 tile.niobium_chest.name=Niobium Chest
 tile.tungsten_furnace.name=Tungsten Furnace
 tile.tungsten_furnace_lit.name=Tungsten Furnace
