--- a/src/main/resources/assets/sublime/lang/en_us.lang
+++ b/src/main/resources/assets/sublime/lang/en_us.lang
@@ -50,6 +50,10 @@ item.iridium_helmet.name=Iridium Helmet
 item.iridium_chestplate.name=Iridium Chestplate
 item.iridium_leggings.name=Iridium Leggings
 item.iridium_boots.name=Iridium Boots
+item.niobium_helmet.name=Niobium Helmet
+item.niobium_chestplate.name=Niobium Chestplate
+item.niobium_leggings.name=Niobium Leggings
+item.niobium_boots.name=Niobium Boots
 item.tungsten_helmet.name=Tungsten Helmet
 item.tungsten_chestplate.name=Tungsten Chestplate
 item.tungsten_leggings.name=Tungsten Leggings
@@ -61,6 +65,11 @@ item.iridium_axe.name=Iridium Axe
 item.iridium_shovel.name=Iridium Shovel
 item.iridium_hoe.name=Iridium Hoe
 item.iridium_sword.name=Iridium Sword
+item.niobium_pickaxe.name=Niobium Pickaxe
+item.niobium_axe.name=Niobium Axe
+item.niobium_shovel.name=Niobium Shovel
+item.niobium_hoe.name=Niobium Hoe
+item.niobium_sword.name=Niobium Sword
 item.tungsten_pickaxe.name=Tungsten Pickaxe
 item.tungsten_axe.name=Tungsten Axe
 item.tungsten_shovel.name=Tungsten Shovel
