Added Chrysanthemum flower.

--- a/src/main/resources/assets/sublime/lang/en_us.lang
+++ b/src/main/resources/assets/sublime/lang/en_us.lang
@@ -35,6 +35,7 @@ tile.muted_dirt.name=Muted Dirt
 tile.muted_grass.name=Muted Grass
 tile.muted_farmland.name=Muted Farmland
 tile.flower_astrantia.name=Astrantia
+tile.flower_chrysanthemum.name=Chrysanthemum
 tile.double_plant_eterisk.name=Eterisk
 tile.calamagrostis.name=Calamagrostis
 tile.black_lotus.name=Black Lotus
