Renamed Black Lotus to Lotus.

--- a/src/main/resources/assets/sublime/lang/en_us.lang
+++ b/src/main/resources/assets/sublime/lang/en_us.lang
@@ -38,7 +38,7 @@ tile.flower_astrantia.name=Astrantia
 tile.flower_chrysanthemum.name=Chrysanthemum
 tile.double_plant_eterisk.name=Eterisk
 tile.calamagrostis.name=Calamagrostis
-tile.black_lotus.name=Black Lotus
+tile.lotus.name=Lotus
 tile.thatch.name=Thatch
 tile.fence_bloodless_elm.name=Bloodless Elm Fence
 tile.fence_hanami.name=Hanami Fence
